# cla7aye15i4nd.github.io

./: .gitignore  404.html  CNAME  Makefile  README.md  atom.xml  build_blog.py  index.html  patchagent.html  pyproject.toml  requirements.txt  site.yaml
.github/workflows/: deploy.yml
archives/: index.html
blog/: L2.html  L2.md  btc-zh.html  btc.html  btc.md  index.html  lean-1.html  lean-1.md
blog_engine/: __init__.py  builder.py  markdown_ext.py  models.py  parser.py  renderer.py
content/blog/: btc.md  btc.zh.md  lean-1.md  v8-sandbox.md
content/data/: awards.yaml  experience.yaml  media.yaml  news.yaml  profile.yaml  publications.yaml  services.yaml  talks.yaml  timeline.yaml
content/pages/: 404.yaml  index.yaml  papers.yaml
post/about/: index.html
post/hello-gridea/: index.html
post/link/: index.html
post/re0-stm32-life-1/: index.html
post/re0-stm32-life-2/: index.html
post/re0-stm32-life-3/: index.html
post/recong-ling-kai-shi-de-dan-pian-ji-sheng-huo-er-stm32-dan-pian-ji-cheng-xu-de-wai-she-yu-mo-ni/: index.html
resume/: main.tex
scripts/: generate_dumpling_svg.py
src/site_builder/: __init__.py  __main__.py  builder.py  cli.py  markdown.py  models.py  renderer.py  server.py
static/: hljs-lean.js  spa.js  style.css
styles/: main.css
tag/Hs46YGIhE/: index.html
tags/: index.html
templates/: 404.html  archive.html  article.html  base.html  index.html  papers.html
templates/macros/: icons.html
templates/partials/: awards.html  dumpling_svg.html  experience.html  media.html  news.html  publications.html  services.html  (+1 more)
