[project]
name = "dataisland-site"
version = "0.1.0"
description = "Personal website and blog for Zheng Yu"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "markdown>=3.5",
    "pymdown-extensions>=10.0",
    "pygments>=2.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "watchfiles>=0.21",
]

[project.scripts]
site = "site_builder.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
    "types-Markdown>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/site_builder"]

[tool.uv]
package = true

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["frontmatter", "watchfiles"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
